--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "frontend",
-  "version": "0.0.0",
+  "name": "dermaviz",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -17,9 +17,13 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@ngx-loading-bar/core": "^7.0.0",
+    "@ngx-loading-bar/router": "^7.0.0",
     "@primeng/themes": "^19.1.3",
+    "@tailwindcss/cli": "^4.1.8",
     "primeng": "^19.1.3",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.1.8",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
