--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@ngx-loading-bar/router": "^7.0.0",
     "@primeng/themes": "^19.1.3",
     "@tailwindcss/cli": "^4.1.8",
+    "date-fns": "^4.1.0",
     "primeng": "^19.1.3",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.8",
